--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,3 @@
-/**
-* Template Name: DevFolio - v2.0.0
-* Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
@@ -117,7 +107,6 @@ a:hover {
   vertical-align: middle;
 }
 
-/*--/ Sections /--*/
 .sect-4 {
   padding: 4rem 0;
 }
@@ -130,14 +119,12 @@ a:hover {
   margin-top: 4rem;
 }
 
-/*--/ Title s /--*/
 .title-s {
   font-weight: 600;
   color: #1e1e1e;
   font-size: 1.1rem;
 }
 
-/*--/ Title A /--*/
 .title-box {
   margin-bottom: 4rem;
 }
@@ -176,6 +163,37 @@ a:hover {
   height: 3px;
   background-color:black;
   width: 56%;
+  bottom: -12px;
+}
+
+.title-left-c {
+  text-align: center;
+  font-size: 2rem;
+  position: relative;
+}
+
+.title-left-c:before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  background-color:black;
+  width: 35%;
+  bottom: -12px;
+}
+
+
+.title-left-t {
+  text-align: center;
+  font-size: 2rem;
+  position: relative;
+}
+
+.title-left-t:before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  background-color:black;
+  width: 38%;
   bottom: -12px;
 }
 
@@ -821,9 +839,6 @@ a:hover {
   font-size: 1.2rem;
 }
 
-/*--------------------------------------------------------------
-# Testimonials
---------------------------------------------------------------*/
 .testimonials .owl-carousel .owl-item img {
   width: auto;
 }
@@ -880,9 +895,6 @@ a:hover {
   }
 }
 
-/*--------------------------------------------------------------
-# Contact
---------------------------------------------------------------*/
 .footer-paralax {
   padding: 4rem 0 0 0;
 }
@@ -993,9 +1005,6 @@ a:hover {
   }
 }
 
-/*--------------------------------------------------------------
-# Blog
---------------------------------------------------------------*/
 @media (min-width: 767px) {
   .card-blog {
     margin-bottom: 3rem;
@@ -1052,9 +1061,6 @@ a:hover {
   display: inline-block;
 }
 
-/*--------------------------------------------------------------
-# Blog Single
---------------------------------------------------------------*/
 .post-box,
 .form-comments,
 .box-comments,
@@ -1155,7 +1161,6 @@ a:hover {
   margin-left: 40px;
 }
 
-/*------/ Sidebar /------*/
 .widget-sidebar .sidebar-title {
   font-size: 1.6rem;
   font-weight: 600;
@@ -1206,9 +1211,6 @@ a:hover {
   color: #fff;
 }
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
 footer {
   text-align: center;
   color: #fff;
